# just-clone

./: Cargo.toml  README.md  README.ts
src/: crates_io.rs  docs_rs.rs  functions.rs  github_com.rs  lib.rs  main.rs  types.rs
src/functions/: get_path.rs  get_url.rs
src/traits/: get_dir.rs
src/types/: cli.rs  clone.rs  command.rs  crate_name.rs  get_dir_fn.rs  outcome.rs  repository_info.rs
