[package]
name = "just-clone"
version = "0.1.0"
edition = "2021"
description = "Clone a repo from any url"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/DenisGorbachev/just-clone"
repository = "https://github.com/DenisGorbachev/just-clone"
readme = "README.md"
keywords = ["utils", "git"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.details]
title = "Clone a repo from any url"
tagline = ""
summary = ""
announcement = ""

[dependencies]
derive-new = { git = "https://github.com/OmarTawfik-forks/derive-new", branch = "impl-into" } # "0.6.0"
derive_more = { version = "1.0.0", features = ["full"] }
fmt-derive = "0.1.2"
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
clap = { version = "4.5.13", features = ["derive"] }
url = "2.5.2"
git2 = "0.19.0"
crates_io_api = { version = "0.11.0" }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "time"] }
url-macro = "0.1.8"
helpful = { path = "../helpful" }
stub-macro = { version = "0.1.5" }
octocrab = { version = "0.39.0" }

[dev-dependencies]
tempfile = { version = "3.12.0" }

[package.metadata.cargo-machete]
ignored = ["stub_macro"]
